@@ -1,24 +1,0 @@
-<?xml version='1.0'?>
-
-<i18n xmlns="http://docbook.sourceforge.net/xmlns/l10n/1.0">
-
-<l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="en">
-
-   <l:context name="section-xref">
-      <l:template name="bridgehead" text="the section called &quot;%t&quot;"/>
-      <l:template name="sect1" text="the section called &quot;%t&quot;"/>
-      <l:template name="sect2" text="the section called &quot;%t&quot;"/>
-      <l:template name="sect3" text="the section called &quot;%t&quot;"/>
-      <l:template name="sect4" text="the section called &quot;%t&quot;"/>
-      <l:template name="sect5" text="the section called &quot;%t&quot;"/>
-      <l:template name="section" text="the section called &quot;%t&quot;"/>
-      <l:template name="simplesect" text="the section called &quot;%t&quot;"/>
-   </l:context>
-
-   <l:context name="section-xref-numbered">
-      <l:template name="simplesect" text="the section called &quot;%t&quot;"/>
-   </l:context>
-
-</l:l10n>
-
-</i18n>
